# SO1_2S2024_201902278

./: README.md
HT#1/: README.md
Proyecto1/: README.md
Proyecto1/Documentación/: README.md
Proyecto1/containers/: cronjob.sh  script.sh
Proyecto1/containers/high/: Dockerfile  high.py
Proyecto1/containers/low/: Dockerfile  low.py
Proyecto1/proc/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo_201902278.ko.cmd  .sysinfo_201902278.mod.cmd  .sysinfo_201902278.mod.o.cmd  .sysinfo_201902278.o.cmd  Makefile  sysinfo_201902278.c  sysinfo_201902278.ko  sysinfo_201902278.mod  sysinfo_201902278.mod.c
Proyecto1/python_service/: main.py
Proyecto1/python_service/logs/: logs.json
Proyecto1/python_service/models/: models.py
Proyecto1/service/: Cargo.toml
Proyecto1/service/python_server/: docker-compose.yaml  dockerfile  main.py
Proyecto1/service/python_server/logs/: logs.json
Proyecto1/service/python_server/models/: models.py
Proyecto1/service/scripts/: cronjob.sh  script.sh
Proyecto1/service/src/: main.rs
Proyecto1/servidor/: main.py  requeriments.txt
Proyecto1/servidor/models/: models.py
Proyecto2/Documentación/: ManualTécnico.md
Proyecto2/K8S/: basic-ingress.yml  discipline-service.yaml  faculty-service.yaml  kafka-cluster.yaml  serice.yml
Proyecto2/service/: api.go  go.mod  main.go  student.pb.go  student.proto  student_grpc.pb.go
Proyecto2/servicerust/: main.rs
Tareas/Tarea1/: modules.order  sysinfo.c  sysinfo.ko  sysinfo.mod.c
Tareas/Tarea2/: contenedores.sh
Tareas/Tarea3/: README.MD
