[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.2.0"
lazy_static = "1.4"  
signal-hook = "0.3"
regex = "1"